tests/typechecking/valid/tuple.ml
let (x, y) = (1, 0.2) in
let k = x + 1 in
let l = 1. -. y in
print_int x
