tests/typechecking/invalid/tuple_mismatch.ml
let (x, y) = (1., 2) in
print_int (x + 1)
